Contract Configurator 1.4.3
- Added support for SpawnVessel in expressions.
- Fixed contracts that appear and disappear in mission control due to requirement issues (thanks dunadirect).
- Improved logic so child REQUIREMENT nodes can hide PARAMETER nodes even when they fail validation (thanks CosmoBro).

Contract Configurator 1.4.2
- Fixed asteroid sample showing up in KSC contracts for Field Research (thanks maculator).
- Fixed mirrored heading/roll/pitch in SpawnVessel (thanks Xephan).
- Fixed issue with RemoteTech vessel tracking (thanks johnpmayer).
- Fixed OrbitGenerator NRE in tracking station (thanks HarlyKin).
- Fixed extra orbits in tracking station (thanks KerbMav).

Contract Configurator 1.4.1
- Add support for heading/roll/pitch in SpawnVessel.
- Fixed ghost icons in OrbitGenerator (thanks KerbMav).
- Remove warnings for Mkerb Inc. Science Instruments (worked just fine before, now is officially supported).
- Re-add limited support for Win64.

Contract Configurator 1.4.0
- Move extra science experiment definition to configuration files.
- Add support in science modules for Station Science.
- Add support in science modules for Solar Science.
- Add support in science modules for N3h3miah's science mods.
- Add additional experiment validation.
- Fix possible NRE in vessel expressions (thanks Mulbin).
- De-support buggy Win64 hacked version until Unity5.

Contract Configurator 1.3.4
- Added support in parameters for completedMessage.
- Fixed NRE in ContractVesselTracker (thanks Morashtak).
- Fixed loading of duplicate Contract Types (thanks jakkarth).
- Fixed issue where random orbits aren't so random (thanks KerbMav).
- Fixed exception loading SpawnKerbal (thanks mega_newblar).

Contract Configurator 1.3.3
- Fixed issue with some load errors getting thrown as an exception.
- Fixed exception when docking with the claw (thanks SirJodelstein).
- Fixed experiment filtering logic for Field Research (thanks Aelfhe1m and HarlyKin).

Contract Configurator 1.3.2